# OptiXRender

./: CMakeLists.txt  README.md  main.cpp  sampleConfig.h.in
CMake/: CompilerInfo.cmake  ConfigCompilerFlags.cmake  CopyDLL.cmake  FindNVTX.cmake  FindOpenEXR.cmake  FindOptiX.cmake  FindZlibStatic.cmake  LinuxCPUInfo.cmake  Macros.cmake  ptx2cpp.cmake  testmain.c
common/: CUDABuffer.h  optix7.h
common/gdt/cmake/: FindOptiX.cmake
common/glfWindow/: CMakeLists.txt  GLFWindow.cpp  GLFWindow.h
core/: CMakeLists.txt
core/cuda/: Environment.h  Filter.h  Light.h  Material.h  Medium.h  Microfacet.h  Sampling.h  Utils.h  devicePrograms.cu  toneMap.cu
core/include/: LaunchParams.h  Model.h  Renderer.h  Scene.h  SceneParser.h
core/src/: Model.cpp  Renderer.cpp  Scene.cpp  SceneParser.cpp
lib/: CompileWithTasks.h
lib/DemandLoading/: CMakeLists.txt  DemandLoaderImpl.cpp  DemandLoaderImpl.h  DeviceContextImpl.cpp  DeviceContextImpl.h  PageMappingsContext.h  PageTableManager.h  PagingSystem.cpp  PagingSystem.h  PagingSystemKernels.cu  PagingSystemKernels.h  RequestContext.h  RequestHandler.h  RequestProcessor.cpp  RequestProcessor.h  RequestQueue.cpp  RequestQueue.h  ResourceRequestHandler.cpp  ResourceRequestHandler.h  Ticket.cpp  TicketImpl.h  TransferBufferDesc.h
lib/DemandLoading/Memory/: Allocators.h  AsyncItemPool.h  Buffers.h  BulkMemory.h  BulkPinnedItemPool.h  DeviceContextPool.cpp  DeviceContextPool.h  DeviceMemoryManager.h  EventPool.h  FixedPool.h  ItemPool.h  PinnedItemPool.h  PinnedMemoryManager.h  PinnedRequestContextPool.h  SamplerPool.h  TileArena.h  TilePool.cpp  TilePool.h
lib/DemandLoading/Textures/: BaseColorRequestHandler.cpp  BaseColorRequestHandler.h  DemandTextureImpl.cpp  DemandTextureImpl.h  DenseTexture.cpp  DenseTexture.h  SamplerRequestHandler.cpp  SamplerRequestHandler.h  SparseTexture.cpp  SparseTexture.h  TextureRequestHandler.cpp  TextureRequestHandler.h
lib/DemandLoading/Util/: CudaCallback.h  DeviceSet.cpp  DeviceSet.h  Exception.h  Math.h  MutexArray.h  NVTXProfiling.h  Stopwatch.h  TraceFile.cpp  TraceFile.h
lib/DemandLoading/docs/API/: CMakeLists.txt  Doxyfile  footer.tex  header.tex  overview.txt
lib/DemandLoading/include/DemandLoading/: DemandLoader.h  DemandTexture.h  DeviceContext.h  Options.h  Paging.h  Resource.h  Statistics.h  Texture2D.h  Texture2DExtended.h  Texture2DFootprint.h  TextureDescriptor.h  TextureSampler.h  Ticket.h  TileIndexing.h  demandLoadingConfig.h.in
lib/ImageSource/: CMakeLists.txt  CheckerBoardImage.cpp  CoreEXRReader.cpp  DeviceConstantImage.cpp  DeviceConstantImageKernels.cu  DeviceMandelbrotImage.cpp  DeviceMandelbrotImageKernels.cu  EXRReader.cpp  Exception.h  ImageSource.cpp  Stopwatch.h  TextureInfo.cpp
lib/ImageSource/include/ImageSource/: CheckerBoardImage.h  CoreEXRReader.h  DeviceConstantImage.h  DeviceConstantImageParams.h  DeviceMandelbrotImage.h  DeviceMandelbrotParams.h  EXRReader.h  ImageSource.h  MultiCheckerImage.h  TextureInfo.h
models/: test.json
rtrt/: CMakeLists.txt  Utils.h  main.cpp
rtrt/core/: Render.cpp  Render.h
rtrt/cuda/: pt.cu
support/: CMakeLists.txt
support/imgui/: CMakeLists.txt
support/tinyexr/: tinyexr.h
support/tinygltf/: tiny_gltf.h
sutil/: CUDAOutputBuffer.h  GLDisplay.h
